--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script type="module" src="js/xaca/idioma.js"></script>
+    <script type="module" src="js/xaca/i18n/idioma.js"></script>
 </head>
 <body>
-    <h1>Prueba</h1>
-    <p>
-        Texto
+    <nav>
+        <a href="javascript:void();" id="xaca_menu_1">INICIO</a>
+        <a href="javascript:void();" id="xaca_menu_2">ACERCA DE</a>
+        <a href="javascript:void();" id="xaca_menu_3">SERVICIOS</a>
+        <a href="javascript:void();" id="xaca_menu_4">CONTÁCTANOS</a>
+        |
+        <a href="javascript:void();" idioma="en" id="btn_en">EN</a>
+        <a href="javascript:void();" idioma="es" id="btn_es">ES</a>
+    </nav>
+    <h1 id="xaca_titulo">El Faro de Cielo</h1>
+    <p id="xaca_texto">
+        En un pequeño pueblo rodeado de montañas y ríos cristalinos, vivía una niña conocida por todos como Cielo. Su apodo no solo se debía a su espíritu alegre y su risa contagiosa, sino también a sus cachetitos de ardilla, preciosos y redondos, que se sonrojaban al sol. Aunque su cabello negro brillaba con un resplandor único, Cielo a menudo se sentía triste por la distancia que la separaba de su querido novio, Andrés, quien vivía en una ciudad lejana. Cada vez que el viento soplaba y las nubes se movían en el cielo, Cielo se sentía sola, como una tortuga que avanza lentamente hacia su destino, deseando que el tiempo y el espacio se acortaran. <br><br>A pesar de la distancia, Andrés siempre estaba presente en los pensamientos de Cielo. Aunque a veces su amor se manifestaba en regaños cariñosos, como una tortuga que cuida con esmero a sus crías, estos momentos no hacían más que fortalecer su vínculo. Andrés tenía una habilidad especial para inventar apodos divertidos y tiernos que hacían reír a Cielo, como \"estrella fugaz\" o \"nube risueña\", recordándole que, a pesar de estar separados, su amor era una constante fuente de alegría.<br><br>Con el tiempo, Cielo comenzó a ver la distancia con otros ojos. Al igual que una tortuga que, aunque avanza lentamente, siempre llega a su destino, Cielo entendió que cada día que pasaba, estaba más cerca de reunirse con Andrés. Su tristeza se transformó en esperanza y su corazón se llenó de una felicidad renovada. Sabía que, aunque los kilómetros los separaban, el amor de Andrés era el faro que iluminaba su camino, recordándole que no estaba sola en su viaje, sino que siempre estaba en el pensamiento y el cariño de alguien que la amaba profundamente.
     </p>
 </body>
 </html>
