instrucciones de instalacion

--- a/src/index.html
+++ b/src/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cielo ❤️</title>
     <script type="module" src="js/xaca/i18n/idioma.js"></script>
 </head>
 <body>
     <nav>
-        <a href="javascript:void();" id="xaca_menu_1">INICIO</a>
-        <a href="javascript:void();" id="xaca_menu_2">ACERCA DE</a>
-        <a href="javascript:void();" id="xaca_menu_3">SERVICIOS</a>
-        <a href="javascript:void();" id="xaca_menu_4">CONTÁCTANOS</a>
+        <a href="javascript:void(0);" id="xaca_menu_1">INICIO</a>
+        <a href="javascript:void(0);" id="xaca_menu_2">ACERCA DE</a>
+        <a href="javascript:void(0);" id="xaca_menu_3">SERVICIOS</a>
+        <a href="javascript:void(0);" id="xaca_menu_4">CONTÁCTANOS</a>
         |
-        <a href="javascript:void();" idioma="en" id="btn_en">EN</a>
-        <a href="javascript:void();" idioma="es" id="btn_es">ES</a>
+        <a href="javascript:void(0);" idioma="en" id="btn_en">EN</a>
+        <a href="javascript:void(0);" idioma="es" id="btn_es">ES</a>
     </nav>
     <h1 id="xaca_titulo">El Faro de Cielo</h1>
     <p id="xaca_texto">
